Made getCameraDescriptionList method concrete